--- a/myweb/user_app/templates/person_info.html
+++ b/myweb/user_app/templates/person_info.html
@@ -24,16 +24,14 @@
 				<a style="height: 10%;" href="#" class="list-group-item active">
 					你正在使用的共享物品：
 				</a>
-
-				<p>Info here</p>
-
+				{% for order in orders %}
 				<div id="item">
 				<a href="#" class="list-group-item">
 					<div class="col-md-3 column" id="itempic">
-						<img alt="140x140" src="../../static/img/-33c57b2c4b298297.jpg" class="img-rounded">
+						<img alt="140x140" src="/{{ order.object.img }}" class="img-rounded">
 					</div>
 					<div class="col-md-6 column">
-						<p>Info here</p>
+						<p>{{ order.object.description }}</p>
 					</div>
 					<div class="col-md-1 column">
 						<button style="float: right;" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
@@ -47,6 +45,7 @@
 					</div>
 				</a>
 				</div>
+				{% endfor %}
 			</div>
 		</div>
 		<div class="col-md-3 column"></div>
