--- a/myweb/user_app/templates/index.html
+++ b/myweb/user_app/templates/index.html
@@ -37,6 +37,29 @@
 	  	xmlhttp.send();
 	}
 
+	function getCookie(name) {
+	  var value = "; " + document.cookie;
+	  var parts = value.split("; " + name + "=");
+	  if (parts.length == 2) return parts.pop().split(";").shift();
+	}
+
+
+	function order_submit_asyn(ele){
+		xmlhttp = getxmlhttp();
+		xmlhttp.onreadystatechange==function(){
+	    	if (xmlhttp.readyState==4){
+				if(xmlhttp.status==200){
+					alert("成功借出物品！")
+					document.getElementById("row2").innerHTML=xmlhttp.responseText;
+				}
+			}else if(xmlhttp.status=404){
+				alert(xmlhttp.responseText);
+			}
+	  	}
+		xmlhttp.open('POST','/user/order_submit',true);
+		xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+		xmlhttp.send('id='+ele.id+'&num='+document.getElementById('num_input').value+'&csrfmiddlewaretoken='+'{{ csrf_token }}');
+	}
 </script>
 		<title>主页</title>
 
@@ -115,15 +138,13 @@
 												订单生成
 											</h3>
 										</div>
-										<form action="/user/order_submit" method="POST">
-											{% csrf_token %}
+										<form action="" method="POST">
 											<div class="modal-body" style="height: 120px;">
 												<table width="90%" height="auto" border="0" align="right" cellpadding="0" cellspacing="0">
-
 												    <tr>
 														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>件数：</h4>
 									    				<td height="45" align="left">
-									    					<input name="" style="width:20%" type="text" class="mytextfield" id="" value="" maxlength="3" />
+									    					<input name="" style="width:20%" type="text" id='num_input' class="mytextfield" id="" value="" maxlength="3" />
 														</td>
 														</td>
 												    </tr>
@@ -132,7 +153,7 @@
 											</div>
 											<div class="modal-footer">
 												<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-												<button type="button" class="btn btn-success" type="submit">提交</button>
+												<button type="button" onclick="order_submit_asyn(this)" id="{{ obj.id }}" class="btn btn-success" type="submit">提交</button>
 											</div>
 										</form>
 									</div>
