--- a/myweb/user_app/templates/person_info.html
+++ b/myweb/user_app/templates/person_info.html
@@ -6,7 +6,7 @@
 		<div class="col-md-3 column" style="background-color:;height: 100%;">
 			{% if user %}
 			<div class="headportrait" style="">
-				<img src="/{{ user.head_pic }}" class="img-rounded" style="height:95%;width:90%;margin-left:10%;margin-top:3% ;">
+				<img src="/{{ user.head_pic }}" class="img-rounded" style="height:95%;width:90%;margin-left:5%;margin-top:2% ;">
 			</div>
 			<div class="per_info" style="">
 				    <ul>
@@ -57,13 +57,13 @@
 			<div class="myshare">
 			<a style="height: 10%;" href="#" class="list-group-item active">
 				我分享的物品：
-					<div class="col-md-2 column" id="itempic">
+					<!--div class="col-md-2 column" id="itempic">
 						<img alt="140x140" src="" class="img-rounded">
 					</div>
-					<div class="col-md-8 column">
+					<div class="col-md-7 column">
 						<p>剩余件数：　　　　物品名称：</p>
 						<p>物品简介：</p>
-					</div>
+					</div-->
 			</a>
 
 			{% for obj in my_share %}
