--- a/myweb/user_app/templates/search.html
+++ b/myweb/user_app/templates/search.html
@@ -4,9 +4,69 @@
 			<div class="row clearfix" id="row2">
 			<div class="col-md-2 column"></div>
 			<div class="col-md-7 column" id="row5">
-                <input type="text" id="keyword" name="input" value="" placeholder="搜索">
-                <input type="button" onclick="#" name="" value="提交">
-                <p>搜索结果</p>
+                
+                	<a style="height: 12%;" href="#" class="list-group-item active">
+					<font style="float: right;">快来搜索物品吧！</font>
+					<input style="float: left;color: black;" type="text" id="keyword" name="input" value="" placeholder="搜索" >
+                	<!--input  style="float: left;color: white;background-color:#434343;border-radius: 3px;" type="button" onclick="#" name="" value="提交" -->
+					<button style="color: black;background-color: white;margin-left: 2px;" class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal">
+								搜索
+					</button>
+                </a>
+	            
+				<div id="item">
+					<a href="#" class="list-group-item">
+						<div class="col-md-2 column" id="itempic">
+							<img alt="140x140" src="/{{ obj.img }}" class="img-rounded">
+						</div>
+
+						<div class="col-md-8 column">
+							<p>剩余件数：{{ obj.num }}　　　　物品名称：{{ obj.name }}</p>
+							<p>物品简介：{{ obj.description }}</p>
+							<p hidden="hidden">{{ obj.id }}　</p>
+						</div>
+
+						<div class="col-md-2 column">
+							<button style="float: right;" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">
+								我要借用
+							</button>
+
+							<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+								<div class="modal-dialog">
+									<div class="modal-content">
+										<div class="modal-header">
+											<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+												&times;
+											</button>
+											<h3 class="modal-title" id="myModalLabel">
+												订单生成
+											</h3>
+										</div>
+										<form action="" method="POST">
+											<div class="modal-body" style="height: 120px;">
+												<table width="90%" height="auto" border="0" align="right" cellpadding="0" cellspacing="0">
+												    <tr>
+														<td height="40" colspan="" align="left" valign="top" scope="row"><h4>件数：</h4>
+									    				<td height="45" align="left">
+									    					<input name="" style="width:20%" type="text" id='num_input' class="mytextfield" id="" value="" maxlength="3" />
+														</td>
+														</td>
+												    </tr>
+
+												</table>
+											</div>
+											<div class="modal-footer">
+												<button type="button" id="close{{ obj.id }}" class="btn btn-default" data-dismiss="modal">关闭</button>
+												<button type="button"  onclick="order_submit_asyn(this)" id="submit{{ obj.id }}" class="btn btn-success" type="submit">提交</button>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+				
 			</div>
 			<div class="col-md-3 column"></div>
 		</div>
