--- a/myweb/user_app/templates/person_info.html
+++ b/myweb/user_app/templates/person_info.html
@@ -15,7 +15,7 @@
 				    <p>简介：{{ user.personal_intro }}</p>
 				    </ul>
 			{% endif %}
-				<a onclick="asy_resp('/user/person_info_modify')" style="color: black;float: right;">信息不对？</a>
+				<a onclick="asy_resp('/user/person_info_modify','row2')" style="color: black;float: right;">信息不对？</a>
 			</div>
 		</div>
 		<div class="col-md-4 column" style="background-color:;height: 100%;">
